--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,5 @@
 [deps]
+CliffordAlgebras = "ca841f6f-225c-4bbd-a467-7a3512dfa6f6"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 GLAbstraction = "ca6e7d0a-b0c9-59ca-8aba-aebf11497e1c"
 GLFW = "f7f18e0c-5ee9-5ccd-a5bf-e8befd85ed98"
