--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ GLAbstraction = "ca6e7d0a-b0c9-59ca-8aba-aebf11497e1c"
 GLFW = "f7f18e0c-5ee9-5ccd-a5bf-e8befd85ed98"
 GeometryTypes = "4d00f742-c7ba-57c2-abde-4428a4b178cb"
 ModernGL = "66fc600b-dfda-50eb-8b99-91cfa97b1301"
+OhMyREPL = "5fb14364-9ced-5910-84b2-373655c76a03"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
