--- a/Project.toml
+++ b/Project.toml
@@ -1,3 +1,8 @@
+name = "AvesAscend"
+uuid = "63e9acb1-65f7-55bb-b984-bf0810fe9e1e"
+version = "0.1.0"
+authors = ["Julian Kizanis <julianzia@gmail.com>"]
+
 [deps]
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 CliffordAlgebras = "ca841f6f-225c-4bbd-a467-7a3512dfa6f6"
@@ -11,3 +16,10 @@ OhMyREPL = "5fb14364-9ced-5910-84b2-373655c76a03"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
+
+[extras]
+Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Markdown", "Test"]
