--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "AvesAscend"
 uuid = "63e9acb1-65f7-55bb-b984-bf0810fe9e1e"
-version = "0.1.0"
 authors = ["Julian Kizanis <julianzia@gmail.com>"]
+version = "0.1.0"
 
 [deps]
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
@@ -15,6 +15,7 @@ ModernGL = "66fc600b-dfda-50eb-8b99-91cfa97b1301"
 OhMyREPL = "5fb14364-9ced-5910-84b2-373655c76a03"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 
 [extras]
