--- a/src/input/input_map.yml
+++ b/src/input/input_map.yml
@@ -3,8 +3,14 @@ keyboard:
   KEY_S: BACKWARD
   KEY_A: LEFT
   KEY_D: RIGHT
-  KEY_Q: TURNLEFT
-  KEY_E: TURNRIGHT
+  KEY_T: UP
+  KEY_G: DOWN
+  KEY_Q: TURN_LEFT
+  KEY_E: TURN_RIGHT
+  KEY_R: TURN_DOWN
+  KEY_F: TURN_UP
+  KEY_Z: TURN_ANTICLOCKWISE
+  KEY_X: TURN_CLOCKWISE
 
 mouse:
   button:
