--- a/Project.toml
+++ b/Project.toml
@@ -1,20 +1,29 @@
 name = "AvesAscend"
 uuid = "63e9acb1-65f7-55bb-b984-bf0810fe9e1e"
-version = "0.1.0"
 authors = ["Julian Kizanis <julianzia@gmail.com>"]
+version = "0.1.0"
 
 [deps]
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 CliffordAlgebras = "ca841f6f-225c-4bbd-a467-7a3512dfa6f6"
+DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
+Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 GLAbstraction = "ca6e7d0a-b0c9-59ca-8aba-aebf11497e1c"
 GLFW = "f7f18e0c-5ee9-5ccd-a5bf-e8befd85ed98"
 GeometryTypes = "4d00f742-c7ba-57c2-abde-4428a4b178cb"
+Interact = "c601a237-2ae4-5e1e-952c-7a85b0c7eef1"
 ModernGL = "66fc600b-dfda-50eb-8b99-91cfa97b1301"
 OhMyREPL = "5fb14364-9ced-5910-84b2-373655c76a03"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
+Overseer = "1ada24be-c16d-4464-9f61-27c2e0f16645"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
+WebIO = "0f1e0344-ec1d-5b48-a673-e5cf874b6c29"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 
 [extras]
