--- a/Project.toml
+++ b/Project.toml
@@ -21,6 +21,7 @@ Overseer = "1ada24be-c16d-4464-9f61-27c2e0f16645"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 WebIO = "0f1e0344-ec1d-5b48-a673-e5cf874b6c29"
