--- a/Project.toml
+++ b/Project.toml
@@ -19,6 +19,7 @@ OhMyREPL = "5fb14364-9ced-5910-84b2-373655c76a03"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Overseer = "1ada24be-c16d-4464-9f61-27c2e0f16645"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 WebIO = "0f1e0344-ec1d-5b48-a673-e5cf874b6c29"
