--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ GLAbstraction = "ca6e7d0a-b0c9-59ca-8aba-aebf11497e1c"
 GLFW = "f7f18e0c-5ee9-5ccd-a5bf-e8befd85ed98"
 GeometryTypes = "4d00f742-c7ba-57c2-abde-4428a4b178cb"
 Interact = "c601a237-2ae4-5e1e-952c-7a85b0c7eef1"
+Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 ModernGL = "66fc600b-dfda-50eb-8b99-91cfa97b1301"
 OhMyREPL = "5fb14364-9ced-5910-84b2-373655c76a03"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
@@ -22,6 +23,7 @@ Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
+WGLMakie = "276b4fcb-3e11-5398-bf8b-a0c2d153d008"
 WebIO = "0f1e0344-ec1d-5b48-a673-e5cf874b6c29"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 
