--- a/Project.toml
+++ b/Project.toml
@@ -12,7 +12,9 @@ DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 GLAbstraction = "ca6e7d0a-b0c9-59ca-8aba-aebf11497e1c"
 GLFW = "f7f18e0c-5ee9-5ccd-a5bf-e8befd85ed98"
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 GeometryTypes = "4d00f742-c7ba-57c2-abde-4428a4b178cb"
+Grassmann = "4df31cd9-4c27-5bea-88d0-e6a7146666d8"
 Interact = "c601a237-2ae4-5e1e-952c-7a85b0c7eef1"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 ModernGL = "66fc600b-dfda-50eb-8b99-91cfa97b1301"
